src/main/metadata-au/objects/MBK_Messages__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MBK_Messages</relationshipLabel>
        <relationshipName>MBK_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_to_commit_info_processing__c</fullName>
        <label>Agreement to commit info processing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentImages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AttachmentImages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Member</label>
        <referenceTo>Campaign_Member__c</referenceTo>
        <relationshipLabel>MBK_Messages</relationshipLabel>
        <relationshipName>MBK_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>MBK_Messages</relationshipLabel>
        <relationshipName>MBK_Messages_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MBK_Messages</relationshipLabel>
        <relationshipName>MBK_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsModify__c</fullName>
        <formula>if(Text(Status__c) = 'Reserved' &amp;&amp; (Set_Sending_Time__c - now()) * 1000 &gt; 20, true, false )</formula>
        <label>IsModify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KaKaoTalk_ID__c</fullName>
        <label>KaKaoTalk ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leads</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>MBK_Messages</relationshipLabel>
        <relationshipName>MBK_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>MBKMessageTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>MBK_Messages</relationshipLabel>
        <relationshipName>MBK_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_In_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile OptIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Abroad_Agreement__c</fullName>
        <label>Personal Abroad Agreement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Agreement__c</fullName>
        <label>Personal Agreement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Information_Third_Party_Release__c</fullName>
        <label>Personal Information Third Party Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBK Message Template</label>
        <referenceTo>MBK_Message_Template__c</referenceTo>
        <relationshipLabel>MBK_Messages</relationshipLabel>
        <relationshipName>MBK_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Set_Sending_Time__c</fullName>
        <label>Set Sending Time</label>
        <type>DateTime</type>
    </fields>
        <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <label>UCID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altCode__c</fullName>
        <label>altCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altMsg__c</fullName>
        <label>altMsg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channel__c</fullName>
        <label>channel</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custGubun__c</fullName>
        <label>custGubun</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custMsgSn__c</fullName>
        <label>custMsgSn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>phoneNum__c</fullName>
        <label>phoneNum</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rcptDtm__c</fullName>
        <label>rcptDtm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reqDtm__c</fullName>
        <label>reqDtm</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>senderKey__c</fullName>
        <label>senderKey</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smsMsg__c</fullName>
        <label>smsMsg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sn__c</fullName>
        <label>sn</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sndDtm__c</fullName>
        <label>sndDtm</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <label>subject</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>templateCode__c</fullName>
        <label>templateCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MBK Messages</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>UCID__c</columns>
        <columns>Status__c</columns>
        <columns>phoneNum__c</columns>
        <columns>Set_Sending_Time__c</columns>
        <columns>KaKaoTalk_ID__c</columns>
        <columns>channel__c</columns>
        <columns>IsModify__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MM-{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBK_Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>